ipc/ipdl/test/ipdl/error/AsyncCtorReturns.ipdl
include protocol AsyncCtorReturnsManagee;

protocol AsyncCtorReturns {
  manages AsyncCtorReturnsManagee;

child:
  async AsyncCtorReturnsManagee() returns (bool unused);
};
